welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  if (negative == true ) {
    			if ((a<0) && (b<0)) {return true}
    			else {return false} ;
        }
  else {  if (a != Math.abs(a)) { if (b<0) {return false} 
    							     else {return true } ; } ;
    			if (a == Math.abs(a)) { if (b>0) {return false} 
                       else {return true} ; } ;
        }
}